# waltti-apc-vehicle-anonymization-profiler

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml  mergify.yml
.github/workflows/: ci-cd.yml  codeql.yml  dependabot-auto-approve.yml  trivy.yml
src/waltti_apc_vehicle_anonymization_profiler/: configuration.py  gcp_logging.py  graceful_exit.py  health_check.py  main.py  message_processing.py  pulsar_wrapper.py  validators.py
src/waltti_apc_vehicle_anonymization_profiler/schemas/: profile-collection.schema.json
tests/: test_health_check.py  test_main.py  test_message_processing.py  test_validators.py
tool-dependencies/: requirements.txt
